# argon-simulation

./: .gitignore  argon.py  crystal.toml  crystal_1ps.toml  gas.toml  melting.toml  parameters.toml  process_xyz  pyproject.toml  run.py  run_melting  simulate_gas  stability.toml
argon/: run.py  simulation.py
figures/: common.py  crystal_stability.py  gas_stability.py  ideal_gas.py  metling_point.py  smallest_potential.py  stability.py  stability_2.py
tex/: main.tex
