[tool.poetry]
name = "argon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
compile = "argon.simulation:main"
argon = "argon.run:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numba = "^0.58.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
